# example-programs-emdros

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  README.md  configure.ac  emdros-example-programs-config.h.in  emdros-example-programs.spec.in
doc/: Makefile.am
m4/: emdros_buildenv.m4  emdros_solaris.m4
src/: Makefile.am
src/cli/: Makefile.am
src/cli/HAL/: HALSpace.cpp  HALSpace.h  Makefile.am  hal.cpp  hal_build_database.cpp  hal_build_database.h  hal_defines.h  hal_execution_environment.cpp  hal_execution_environment.h  hal_schema.cpp  hal_schema.h  hal_string_func.cpp  hal_string_func.h  halblddb.cpp  hallexer.h  hallexer.l  hallexer.re  mingw.mak  win32.mak
src/cli/HAL/doc/: Makefile.am
src/gui/: Makefile.am
src/gui/art/: Makefile.am
src/gui/chunkingtool/: Info.plist.in  Makefile.am  ctdoc.cpp  ctdoc.h  ctmf.cpp  ctmf.h  ctwx.cpp  ctwx.h  mingw.mak  scripturesys-chunkingtool.desktop  win32.mak
src/gui/chunkingtool/cfg/: wihebrew.cfg
src/gui/chunkingtool/doc/: Makefile.am  Makefile.inc
