EXTRA_DIST = \
           blue-E-128x128.png \
           blue-E-16x16.png \
           blue-E-22x22.png \
           blue-E-32x32.png \
           blue-E-48x48.png \
           blue-E-64x64.png \
           blue-E-big.xcf \
           blue-E.icns \
           blue-E.ico \
           blue-E.xpm \
           clear.xpm \
           commit.xpm \
           connect.xpm \
           copy.xpm \
           cut.xpm \
           EmdrosSplashScreen.xpm \
           flash.xpm \
           leftarrow.xpm \
           new.xpm \
           open.xpm \
           paste.xpm \
           rightarrow.xpm \
           save.xpm \
           stop.xpm \
           together.xpm 


dist_pkgdata_DATA = \
                    blue-E-16x16.png \
                    blue-E-22x22.png \
                    blue-E-32x32.png \
                    blue-E-48x48.png \
                    blue-E-64x64.png \
                    blue-E-128x128.png
